# CASE

./: .gitattributes  .gitignore
CASE_Simple_Example_V4/Hardened/Component_Source/Attestation/: CMakeLists.txt
CASE_Simple_Example_V4/Hardened/Component_Source/Attestation/am/: Measurements.sml
CASE_Simple_Example_V4/Hardened/Component_Source/Attestation/apps/: README.md
CASE_Simple_Example_V4/Hardened/Component_Source/Attestation/apps/case-tool-assessment/: GoldenHashes.sml  Heli.sml  fake_hamr_standard.c
CASE_Simple_Example_V4/Hardened/Component_Source/Attestation/apps/serverClient/: README.md
CASE_Simple_Example_V4/Hardened/Component_Source/Attestation/apps/tests/: README.md
CASE_Simple_Example_V4/Hardened/Component_Source/Attestation/system/: README.md  basis_ffi.c
CASE_Simple_Example_V4/Hardened/Component_Source/Attestation/system/crypto/: CryptoFFI.sml  crypto_ffi.c
CASE_Simple_Example_V4/Hardened/Component_Source/Attestation/system/dataports/: DataportFFI.sml
CASE_Simple_Example_V4/Hardened/Component_Source/Attestation/system/posix/sockets/: SocketFFI.sml
CASE_Simple_Example_V4/Hardened/Component_Source/Attestation/util/: CoqDefaults.sml
CASE_Simple_Example_V4/Hardened/HAMR/CAmkES/slang_libraries/AttestationManager_Impl_SW_AttestationManager_AttestationManager/: CMakeLists.txt  typemap.properties
CASE_Simple_Example_V4/Hardened/HAMR/CAmkES/slang_libraries/AttestationManager_Impl_SW_AttestationManager_AttestationManager/app-AttestationManager/: AttestationManager.c
CASE_Simple_Example_V4/Hardened/HAMR/CAmkES/slang_libraries/AttestationManager_Impl_SW_AttestationManager_AttestationManager/ext/: AttestationManager_Impl_SW_AttestationManager_AttestationManager_api.h
CASE_Simple_Example_V4/Hardened/HAMR/CAmkES/slang_libraries/AttestationManager_Impl_SW_AttestationManager_AttestationManager/runtime/: all.c  all.h  type-composite.h  types.c  types.h
CASE_Simple_Example_V4/Hardened/HAMR/CAmkES/slang_libraries/FlightController_Impl_SW_FlightController_FlightController/: CMakeLists.txt  typemap.properties
CASE_Simple_Example_V4/Hardened/HAMR/CAmkES/slang_libraries/FlightController_Impl_SW_FlightController_FlightController/app-FlightController/: FlightController.c
CASE_Simple_Example_V4/Hardened/HAMR/CAmkES/slang_libraries/FlightController_Impl_SW_FlightController_FlightController/ext/: FlightController_Impl_SW_FlightController_FlightController_adapter.h  FlightController_Impl_SW_FlightController_FlightController_api.c
CASE_Simple_Example_V4/Hardened/HAMR/CAmkES/slang_libraries/FlightController_Impl_SW_FlightController_FlightController/runtime/: all.c  all.h  type-composite.h  types.c  types.h
CASE_Simple_Example_V4/Initial/HAMR/CASE_MONITOR2_TEST/CamkES/slang_libraries/CASE_Monitor2_Impl_CASE_Monitor2_CASE_Monitor2/: CMakeLists.txt  sizes.txt  typemap.properties
CASE_Simple_Example_V4/Initial/HAMR/CASE_MONITOR_2_TEST/CAmkES/slang_libraries/Input_impl_Input_Input/: CMakeLists.txt  typemap.properties
CASE_Simple_Example_V4/Initial/HAMR/CASE_MONITOR_TEST/CAmkES/slang_libraries/SlangTypeLibrary/: CMakeLists.txt
CASE_Simple_Example_V4/Initial/HAMR/src/c/nix/: CMakeLists.txt  sizes.txt  typemap.properties
CASE_Simple_Example_V4/Initial/HAMR/src/c/nix/app-FlightController_Impl_SW_FlightController_App/: FlightController_Impl_SW_FlightController_App.c
CASE_Simple_Example_V4/Initial/HAMR/src/c/nix/app-Main/: Main.c
CASE_Simple_Example_V4/Initial/HAMR/src/c/nix/app-RadioDriver_Impl_SW_Radio_App/: RadioDriver_Impl_SW_Radio_App.c
CASE_Simple_Example_V4/Initial/HAMR/src/c/nix/linux-build/: CMakeCache.txt  Makefile  cmake_install.cmake
CASE_Simple_Example_V4/Initial/HAMR/src/c/nix/runtime/: all.c  all.h  lib.h  type-composite.h  type.h  types.c  types.h  ztype.h
CASE_Simple_Example_V4/Initial/HAMR_Simple_V4/components/VM/apps/vmFlightPlanner/: CMakeLists.txt  vmFlightPlanner.c
TA5/camkes-vm-build/projects/global-components/components/FileServer/: CMakeLists.txt  FileServer.camkes
TA5/camkes-vm-build/projects/global-components/components/FileServer/libFileServer-client/: CMakeLists.txt  fsclient.c  fsclient.h
TA5/camkes-vm-build/projects/global-components/components/FileServer/src/: server.c
TA5/tool-assessment-4/phase2/vm/aadl/c_libraries/CMASI/: CMakeLists.txt
TA5/tool-assessment-4/phase2/vm/aadl/c_libraries/CMASI/include/: enums.h  (+2 more)
TA5/tool-assessment-4/phase2/vm/aadl/c_libraries/hexdump/: CMakeLists.txt
TA5/tool-evaluation-3/simple-uav-slang-example/uav-project-extern/src/c/nix/: CMakeLists.txt
TA5/tool-evaluation-3/simple-uav-slang-example/uav-project/src/c/: CMakeLists.txt  typemap.properties
TA5/tool-evaluation-3/simple-uav-slang-example/uav-project/src/c/app-FlightPlanner_Impl_App/: FlightPlanner_Impl_App.c
TA5/tool-evaluation-3/simple-uav-slang-example/uav-project/src/c/app-Main/: Main.c
TA5/tool-evaluation-3/simple-uav-slang-example/uav-project/src/c/app-RadioDriver_Impl_App/: RadioDriver_Impl_App.c
TA5/tool-evaluation-3/simple-uav-slang-example/uav-project/src/c/app-Radio_Impl_App/: Radio_Impl_App.c
TA5/tool-evaluation-3/simple-uav-slang-example/uav-project/src/c/app-UARTDriver_Impl_App/: UARTDriver_Impl_App.c
TA5/tool-evaluation-3/simple-uav-slang-example/uav-project/src/c/app-UART_Impl_App/: UART_Impl_App.c
TA5/tool-evaluation-3/simple-uav-slang-example/uav-project/src/c/app-WaypointManager_Impl_App/: WaypointManager_Impl_App.c
TA5/tool-evaluation-3/simple-uav-slang-example/uav-project/src/c/ext/: ext.c  ipc.c  ipc.h
TA5/tool-evaluation-4/HAMR/examples/test_data_port_single_vm/CAmkES_seL4_Only/: CMakeLists.txt  top_impl_Instance.camkes
TA5/tool-evaluation-4/HAMR/examples/test_event_data_port_periodic_domains/CAmkES_seL4_Only_2VM/: CMakeLists.txt  settings.cmake
TA5/tool-evaluation-4/HAMR/examples/test_event_data_port_periodic_domains/CAmkES_seL4_Only_with_VM/: CMakeLists.txt  hamr-simple-example-VM-notes.txt  settings.cmake  top_impl_Instance.camkes
TA5/tool-evaluation-4/HAMR/examples/test_event_data_port_two_vms/CAmkES_seL4_TB/: CMakeLists.txt  settings.cmake  test_event_data_port_two_vms.camkes
(+5616 files in other folders)
